--- a/src/index.css
+++ b/src/index.css
@@ -58,11 +58,15 @@ input, select, textarea{
 }
 
 .container{
-
+  display: block;
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
 .main{
-
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.25);
 }
 
 .title{
