--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 .new-todo{
-    background-color: rgba(0,0,0,0.3);
-    box-shadow: inset 0 -2px 1px rgba (0, 0, 0, 0.03);
+    background-color: rgba(0, 0, 0, 0.03);
+    box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 
     font-size: 1.5rem;
     font-style: italic;
