--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,50 @@
     width: 100%;
     padding: 16px 16px 18px 16px;
 }
+
+/* .view{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 16px 18px 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.03);
+    box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+    font-size: 1.5rem;
+    font-style: italic;
+} */
+
+
+/* delete button */
+button[type = 'button']{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+    width: 50px;
+    color: #ff6775
+}
+
+ul.todo-list li{
+    display: flex;
+    border-top: 1px solid #dfe6e9;
+    border-bottom: 1px solid #dfe6e9;
+    justify-content: space-between;
+    padding: 8px
+}
+
+.todo{
+    flex: 1;
+    outline: none;
+    cursor: pointer;
+    font: 1.5rem;
+    word-break: break-all;
+    line-height: 1.2;
+    transition: color 0.3s;
+    padding: 15px 15px 17px 15px;
+}
+
+.todo.checked{
+    color: #b2bec3;
+    text-decoration: line-through;
+}
